external-projects/sui-prover/crates/sui-prover/tests/snapshots/ignore_abort-no_opaque.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
  ┌─ tests/inputs/ignore_abort-no_opaque.move:8:7
  │
8 │     x + 1
  │       ^
  │
  =     at tests/inputs/ignore_abort-no_opaque.move:12: foo_spec
